# m3_ocr

./: .gitignore  README.md  check_deps.py  pyproject.toml
doc/: Support_de_présentation_COnsomation_Energie_Seattle.pptx
notebooks/: FULL_Sklearn_Pipeline.ipynb  STEP_1_Problematique.ipynb  STEP_3_FEA_ENG_SET1.ipynb  STEP_3_FEA_ENG_SET2.ipynb  STEP_4_MOD_SET1_CUSTOM.ipynb  STEP_4_MOD_SET2_CUSTOM.ipynb  STEP_4_MOD_SET2_PIPELINE.ipynb  STEP_4_Modélisation_V0.ipynb  analyse_donnees.py  analysis_correlation_engine.py  categorical_analysis.py  cleaning_filters.py  data_inspector.py  data_preprocessing.py  data_pro_.py  domain_analysis_engine.py  feature_ranking_engine.py  feature_selection_report.py  interpretation_expert.py  missing_analysis.py  nettoyage_donnees.py  outlier_engine.py  pipeline_modular_ML.py  seattle_custom_funtions.py  univariate_analysis.py  univariate_visualization.py  variance_analysis.py  visualizer.py
src/: sklearn_chooser.py
